docs(guardoni): installation and usage sections

--- a/docs/docs/partials/extension/_index.mdx
+++ b/docs/docs/partials/extension/_index.mdx
@@ -1,3 +1,4 @@
+import TOCInline from '@theme/TOCInline';
 import ExtensionDevelopmentPartial from './_development.mdx';
 import ExtensionBuildPartial from './_build.mdx'
 
